# c-orderbook

./: .gitignore  Dockerfile  README.md
cpp-engine/: CMakeLists.txt
cpp-engine/include/: engine.h  indicators.h  latency_tracker.h  ring_buffer.h  strategy.h  thread_pool.h  types.h  ws_ingestor.h
cpp-engine/src/: bench.cpp  engine.cpp  indicators.cpp  main.cpp
cpp-engine/tests/: test_indicators.cpp
node-backend/: .env.example  Dockerfile  binding.gyp  package.json  railway.toml
node-backend/bindings/: engine_binding.cpp
node-backend/src/: engine-router.js  ipc-client.js  logger.js  mockEngine.js  priceFeed.js  server.js
react-frontend/: package.json  vercel.json  vite.config.ts
react-frontend/src/: App.jsx  App.tsx  main.tsx
react-frontend/src/components/: AlertFeed.tsx  IndicatorPanel.jsx  IndicatorPanel.tsx  PriceChart.jsx  PriceChart.tsx  SignalFeed.jsx  SystemMetrics.jsx
react-frontend/src/hooks/: useEngine.js  useEngineSocket.ts
react-frontend/src/types/: index.ts
